--- a/AvaliaçãoEly.ipynb
+++ b/AvaliaçãoEly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {
     "scrolled": false
    },
@@ -78,26 +78,29 @@
       "Recall: 0.47368421052631576\n",
       "Acurácia: 0.782608695652174\n",
       "Precisão: 0.8181818181818182\n",
+      "Zero-One Loss: 0.21739130434782605\n",
       "Predito T  0   1  All\n",
       "Real                 \n",
       "0          0   4    4\n",
       "1          1  18   19\n",
       "All        1  22   23\n",
       "-----------------------------------------------------------------------------------------------------------\n",
-      "Score: 0.782608695652174\n",
-      "Recall: 0.5723684210526316\n",
-      "Acurácia: 0.782608695652174\n",
-      "Precisão: 0.85\n",
+      "Score: 0.8260869565217391\n",
+      "Recall: 0.5986842105263157\n",
+      "Acurácia: 0.8260869565217391\n",
+      "Precisão: 0.8571428571428571\n",
+      "Zero-One Loss: 0.17391304347826086\n",
       "Predito T  0   1  All\n",
       "Real                 \n",
       "0          1   3    4\n",
-      "1          2  17   19\n",
-      "All        3  20   23\n",
+      "1          1  18   19\n",
+      "All        2  21   23\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Score: 0.8260869565217391\n",
       "Recall: 0.5986842105263157\n",
       "Acurácia: 0.8260869565217391\n",
       "Precisão: 0.8571428571428571\n",
+      "Zero-One Loss: 0.17391304347826086\n",
       "Predito T  0   1  All\n",
       "Real                 \n",
       "0          1   3    4\n",
@@ -172,17 +175,17 @@
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x2518178b940>,\n",
-       "  <matplotlib.lines.Line2D at 0x2518178bd68>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x2518178be48>,\n",
-       "  <matplotlib.lines.Line2D at 0x251817203c8>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x2518178b3c8>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x25181720940>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x25181720438>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x25181796cc0>,\n",
+       "  <matplotlib.lines.Line2D at 0x25181796da0>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x251802d9550>,\n",
+       "  <matplotlib.lines.Line2D at 0x251802d9978>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x25181796748>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x251802d9da0>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x251802d9e80>],\n",
        " 'means': []}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
