--- a/AvaliaçãoEly.ipynb
+++ b/AvaliaçãoEly.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Matriz de correlação\n",
       "                          sex       age      Time  Number_of_Warts      Type  \\\n",
       "sex                  1.000000  0.043682 -0.014825         0.100785 -0.104623   \n",
       "age                  0.043682  1.000000  0.188981         0.000092 -0.056636   \n",
@@ -48,6 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Análise Discriminatória Linear\n",
       "Score: 0.8260869565217391\n",
       "Recall: 0.5\n",
       "Acurácia: 0.8260869565217391\n",
@@ -57,23 +59,9 @@
       "Real              \n",
       "0           4    4\n",
       "1          19   19\n",
-      "All        23   23"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ermeson\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "All        23   23\n",
       "-----------------------------------------------------------------------------------------------------------\n",
+      "Análise Discriminatória Quadrática\n",
       "Score: 0.782608695652174\n",
       "Recall: 0.47368421052631576\n",
       "Acurácia: 0.782608695652174\n",
@@ -85,6 +73,33 @@
       "1          1  18   19\n",
       "All        1  22   23\n",
       "-----------------------------------------------------------------------------------------------------------\n",
+      "Floresta Randômica\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.782608695652174\n",
+      "Recall: 0.5723684210526316\n",
+      "Acurácia: 0.782608695652174\n",
+      "Precisão: 0.85\n",
+      "Zero-One Loss: 0.21739130434782605\n",
+      "Predito T  0   1  All\n",
+      "Real                 \n",
+      "0          1   3    4\n",
+      "1          2  17   19\n",
+      "All        3  20   23\n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "Bagging\n",
       "Score: 0.8260869565217391\n",
       "Recall: 0.5986842105263157\n",
       "Acurácia: 0.8260869565217391\n",
@@ -96,17 +111,7 @@
       "1          1  18   19\n",
       "All        2  21   23\n",
       "-----------------------------------------------------------------------------------------------------------\n",
-      "Score: 0.8260869565217391\n",
-      "Recall: 0.5986842105263157\n",
-      "Acurácia: 0.8260869565217391\n",
-      "Precisão: 0.8571428571428571\n",
-      "Zero-One Loss: 0.17391304347826086\n",
-      "Predito T  0   1  All\n",
-      "Real                 \n",
-      "0          1   3    4\n",
-      "1          1  18   19\n",
-      "All        2  21   23\n",
-      "-----------------------------------------------------------------------------------------------------------\n"
+      "Bagging\n"
      ]
     },
     {
@@ -142,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Idade:\n"
+      "Idade dos pacientes:\n"
      ]
     },
     {
@@ -173,19 +178,26 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diagrama de Caixa\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x25181796cc0>,\n",
-       "  <matplotlib.lines.Line2D at 0x25181796da0>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x251802d9550>,\n",
-       "  <matplotlib.lines.Line2D at 0x251802d9978>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x25181796748>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x251802d9da0>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x251802d9e80>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x188f511f470>,\n",
+       "  <matplotlib.lines.Line2D at 0x188f511f898>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x188f511fcc0>,\n",
+       "  <matplotlib.lines.Line2D at 0x188f511fda0>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x188f5114860>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x188f50ff550>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x188f50ff978>],\n",
        " 'means': []}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -222,6 +234,7 @@
     "x = df[['sex','age','Time','Number_of_Warts', 'Type','Area','induration_diameter']]\n",
     "y = df[['Result_of_Treatment']]\n",
     "\n",
+    "print(\"Matriz de correlação\")\n",
     "correlations = df.corr()\n",
     "print(correlations)\n",
     "fig = plt.figure()\n",
@@ -240,9 +253,6 @@
     "\n",
     "x_treino, x_teste, y_treino, y_teste = train_test_split(x, y, test_size=0.25, random_state=0)\n",
     "\n",
-    "#rskf = RepeatedStratifiedKFold(n_splits=2, n_repeats=2,random_state=36851234)\n",
-    "#x_treino, x_teste, y_treino, y_teste = rskf.split(x, y)\n",
-    "\n",
     "#Substituição dos valores das colunas:\n",
     "df.loc[df['Result_of_Treatment'] == 1, 'Result_of_Treatment'] = \"Sucesso\"\n",
     "df.loc[df['Result_of_Treatment'] == 0, 'Result_of_Treatment'] = \"Fracasso\"\n",
@@ -250,6 +260,7 @@
     "df.loc[df['sex'] == 2, 'sex'] = \"Masculino\"\n",
     "\n",
     "#Teste Análise Discriminatória Linear (maior score)\n",
+    "print(\"Análise Discriminatória Linear\")\n",
     "\n",
     "clf.fit(x_treino, y_treino)\n",
     "parametros = clf.predict(x_teste)\n",
@@ -263,6 +274,7 @@
     "print('-----------------------------------------------------------------------------------------------------------')\n",
     "\n",
     "#Teste Análise Discriminatória Quadrática\n",
+    "print(\"Análise Discriminatória Quadrática\")\n",
     "clf = QuadraticDiscriminantAnalysis()\n",
     "clf.fit(x_treino, y_treino.values.ravel())\n",
     "\n",
@@ -277,6 +289,7 @@
     "print('-----------------------------------------------------------------------------------------------------------')\n",
     "\n",
     "#Teste Floresta Randômica\n",
+    "print(\"Floresta Randômica\")\n",
     "clf = RandomForestClassifier()\n",
     "clf.fit(x_treino, y_treino.values.ravel())\n",
     "parametros = clf.predict(x_teste)\n",
@@ -290,6 +303,7 @@
     "print('-----------------------------------------------------------------------------------------------------------')\n",
     "\n",
     "#Teste Bagging\n",
+    "print(\"Bagging\")\n",
     "clf = BaggingClassifier()\n",
     "clf.fit(x_treino, y_treino.values.ravel())\n",
     "parametros = clf.predict(x_teste)\n",
@@ -303,6 +317,7 @@
     "print('-----------------------------------------------------------------------------------------------------------')\n",
     "\n",
     "#Histograma\n",
+    "print(\"Bagging\")\n",
     "df.hist()\n",
     "plt.show()\n",
     "\n",
@@ -338,7 +353,7 @@
     "\n",
     "plt.pie(sizes, labels=labels, colors=colors,\n",
     "autopct='%1.1f%%', shadow=True, startangle=10)\n",
-    "print(\"Idade:\")\n",
+    "print(\"Idade dos pacientes:\")\n",
     "plt.axis('equal')\n",
     "plt.show()\n",
     "\n",
@@ -359,6 +374,7 @@
     "plt.show()\n",
     "\n",
     "#diagrama de caixa\n",
+    "print(\"Diagrama de Caixa\")\n",
     "age = df['age']\n",
     "plt.boxplot(age, showfliers=True)\n"
    ]
